# cmake_qt

./: CMakeLists.txt  main.cpp
export_dll/: CMakeLists.txt  Global.h  SWidgets.cpp  SWidgets.h
